feed2mobi 0.1.1
===============

* Overview of Changing:
 - Make article breakpage by default
 - Limit the image size to 300 height