@@ -4,3 +4,4 @@ feed2mobi 0.1.1
 * Overview of Changing:
  - Make article breakpage by default
  - Limit the image size to 300 height
+ - Add author, change updated style and full text support
